--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         let hours = 0;
         let minutes = 0;
         let seconds = 0;
+        let day = 0;
+        let night = 0;
+        let pi_s = 0;
+        let pi_e = 0;
+        let q_s = 0;
+        let q_e = 0;
 
         function setup() {
             createCanvas(400, 400);
@@ -25,6 +31,12 @@
                     hours = Math.floor(data.hours);
                     minutes = Math.floor(data.minutes);
                     seconds = Math.floor(data.seconds);
+                    day = data.len_day;
+                    night = data.len_night;
+                    pi_s = data.pi_start;
+                    pi_e = data.pi_end;
+                    q_s = data.qt_start;
+                    q_e = data.qt_end;
                 });
 
             // Draw clock face
@@ -33,19 +45,20 @@
             noFill();
             ellipse(0, 0, 300, 300);  // Outer circle
 
-            // Draw numbers on the clock face (1 to 12)
+            // Draw numbers on the clock face (1 to 24)
             fill(255);
             textSize(24);
             textAlign(CENTER, CENTER);
-            for (let i = 1; i <= 12; i++) {
-                let angle = map(i, 0, 12, 0, TWO_PI) - HALF_PI;
+            let lista = ["卯", "辰", "巳", "午", "未", "申", "酉", "戌", "亥", "子", "丑", "寅"];
+            for (let i = 0; i < 12; i++) {
+                let angle = map(i, 0, 12, 0, TWO_PI) + PI;
                 let x = 120 * cos(angle);
                 let y = 120 * sin(angle);
-                text(i, x, y);
+                text(lista[i], x, y);
             }
 
             // Draw hour hand
-            let hourAngle = map(hours + minutes / 60, 0, 12, 0, TWO_PI) - HALF_PI;
+            let hourAngle = map(hours + minutes / 60, q_s, q_e, pi_s, pi_e);
             let hourX = 60 * cos(hourAngle);
             let hourY = 60 * sin(hourAngle);
             stroke(255);
@@ -72,9 +85,27 @@
             let timeString = nf(hours, 2) + ":" + nf(minutes, 2) + ":" + nf(seconds, 2);
             text(timeString, 0, 180);  // Display time below the clock
         }
+
+        function getTime() {
+            fetch('/change', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({})
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log(data.message);
+            });
+        }
+
+
     </script>
 </head>
 <body>
     <h1 style="text-align: center; color: white;">Fast Spinning Clock</h1>
+    <button id="getTimeButton" onclick="getTime()">Pobierz czas</button>
+    <div id="timeDisplay" style="text-align: center; color: white; margin-top: 20px;"></div>
 </body>
 </html>
